# Robo-guide

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  docker-bake.hcl  pyproject.toml
.docker/: Dockerfile  Dockerfile.jetson  Dockerfile.jetson-cpu  Dockerfile.x86-cpu  Dockerfile.x86-gpu  DockerfileCuda  README.md
.docker/common/: 00-tools.sh  10-ros2-repo.sh  20-ros2-packages.sh  25-can-utils.sh  30-python-common.sh  35-sensor-tools.sh  40-ml-jetson-cpu.sh  40-ml-jetson.sh  40-ml-x86-cpu.sh  40-ml-x86-gpu.sh  90-user-setup.sh
.github/workflows/: ci.yml
guide_robot_bringup/: package.xml  setup.py
guide_robot_bringup/config/: guide_robot_controllers.yaml
guide_robot_bringup/launch/: gazebo.launch.py  hardware.launch.py  sensors.launch.py  simulation.launch.py  test.launch.py  view_robot.launch.py
guide_robot_bringup/rviz/: sim.rviz  view_robot.rviz
guide_robot_description/: CMakeLists.txt  package.xml
guide_robot_description/meshes/: .gitkeep  al_profile.stl  lidars_mount.stl
guide_robot_description/params/: robot_params.yaml  temp_controllers.yaml
guide_robot_description/urdf/: guide_robot.gazebo.xacro  guide_robot.ros2_control.xacro  guide_robot.urdf.xacro
guide_robot_description/worlds/: simple.world
guide_robot_hardware/: CMakeLists.txt  guide_robot_hardware.xml  package.xml  setup.py
guide_robot_hardware/guide_robot_hardware/: motor_driver_node.py
guide_robot_hardware/include/guide_robot_hardware/: guide_robot_system.hpp
guide_robot_hardware/src/: guide_robot_system.cpp
guide_robot_msgs/: CMakeLists.txt  package.xml
guide_robot_navigation/: package.xml  setup.cfg  setup.py
guide_robot_navigation/launch/: navigation.launch.py  slam_navigation.launch.py
guide_robot_navigation/map/: simple.pgm  simple.yaml
guide_robot_navigation/params/: mapper_params_online_async.yaml
guide_robot_simulation/: package.xml  setup.cfg  setup.py
guide_robot_simulation/guide_robot_simulation/: sonar_merge.py
guide_robot_simulation/launch/: gazebo.launch.py
guide_robot_sonar/: CMakeLists.txt  package.xml
guide_robot_sonar/include/guide_robot_sonar/: sonar_driver.hpp
guide_robot_sonar/scripts/: sonar_node.py  sonar_node_mult.py
guide_robot_sonar/src/: sonar_driver.cpp  sonar_driver_bindings.cpp
scripts/: 99-furo-devices.rules  create_rules.sh
src/guide_robot_bringup/: package.xml  setup.cfg
src/guide_robot_bringup/launch/: hardware.launch.py
src/guide_robot_description/urdf/: guide_robot_urdf.xacro
src/guide_robot_hardware/: setup.cfg
src/guide_robot_hardware/guide_robot_hardware/: motor_driver_node.py
